<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kadir.matematikoyunu.seviye_carpma">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/ca"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_kolay"

            android:layout_width="225dp"
            android:layout_height="60dp"
            android:background="@drawable/buttonshape"
            android:drawableLeft="@mipmap/kol"
            android:paddingLeft="20dp"
            android:shadowColor="#76FF03"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/kol"
            android:textColor="#5D4037"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_corta"

            android:layout_width="225dp"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/buttonshape"
            android:drawableLeft="@mipmap/orta"
            android:paddingLeft="20dp"
            android:shadowColor="#CDDC39"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/ort"
            android:textColor="#5D4037"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn_zor"

            android:layout_width="225dp"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/buttonshape"
            android:drawableLeft="@mipmap/zor"
            android:paddingLeft="20dp"
            android:shadowColor="#CDDC39"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/zo"
            android:textColor="#5D4037"
            android:textSize="30sp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
