<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kadir.matematikoyunu.Sonuc">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/cd"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/tebrik"
            android:textColor="#c51162"
            android:textSize="30sp"
            tools:textColor="#C51162" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="101dp">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="Scor:"
                android:textColor="#c51162"
                android:textSize="30sp"
                />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:textColor="#c51162"
                android:textSize="30sp"
                tools:textColor="#C51162" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.30"
            android:orientation="horizontal">

            <Button
                android:id="@+id/tekrarOyna"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@mipmap/againe" />

            <Button
                android:id="@+id/cikis"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:background="@mipmap/exitb" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.35"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textVie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_weight="1"
                android:text="@string/oyna"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textVie1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:text="@string/cikis"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.32"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="141dp">

            <Button
                android:id="@+id/oyla"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:background="@mipmap/ratec" />

            <Button
                android:id="@+id/paylas"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@mipmap/sharea" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/puan"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:text="@string/paylas"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
