<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kadir.matematikoyunu.carpma_kolay">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/a"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar2"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="30dp"
            android:progress="100" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_s8"
                android:layout_width="6dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:text="@string/zaman"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_sure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="6dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/skorlar"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_skor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hata"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_hata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_soru"

            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="90dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/buttonshape"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="36sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cevap_a"

                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginLeft="25dp"
                android:background="@drawable/buttonshape"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="36sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                app:srcCompat="@mipmap/correct" />

            <Button
                android:id="@+id/btn_cevap_b"

                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginLeft="25dp"
                android:background="@drawable/buttonshape"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="36sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                app:srcCompat="@mipmap/correct" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cevap_c"

                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/buttonshape"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="36sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_weight="1"
                app:srcCompat="@mipmap/correct" />

            <Button
                android:id="@+id/btn_cevap_d"

                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/buttonshape"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="36sp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:layout_weight="1"
                app:srcCompat="@mipmap/correct" />

        </LinearLayout>

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="30dp"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3206398076180977/8684812993"></com.google.android.gms.ads.AdView>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
